2006-01-04  Tor Lillqvist  <tml@novell.com>

	* gui/dialogs/cal-prefs-dialog.c: Reinstate the run-time glade
	file pathname lookup change from 2005-11-26. It had been
	overwritten on 2005-12-19.

2006-01-03  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #325416
	
	* gui/e-day-view.c: (e_day_view_convert_event_coords),
	(tooltip_get_view_event), (tooltip_destroy),
	(e_day_view_on_text_item_event): Read the event num from the position
	of x,y.

2006-01-02  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #325414

	* gui/e-calendar-view.c: (e_calendar_view_get_tooltips): Added null
	check for the string before creating the tooltips and stopped showing
	it.
	* gui/e-day-view.c: (e_day_view_on_editing_stopped):
	* gui/e-week-view.c: (e_week_view_on_editing_stopped): Added code to
	hide tooltips window when start/stop hiding

2006-01-02  Harish Krishnaswamy  <kharish@novell.com>

	reviewed by: Chenthill Palanisamy <pchenthill@novell.com> 

	* gui/e-tasks.c: (open_ecal): The timezone should be set on
	the task we are trying to open - not on the default.
	Fixes #325489.

2006-01-02  Harish Krishnaswamy  <kharish@novell.com>

	* gui/dialogs/cal-prefs-dialog.c: (show_fb_config):
	Fixes #325468 (critical warning crasher).

2005-12-30  Andre Klapper <a9016009@gmx.de>

	* icalendar-importer.c: removed a duplicated exclamation mark.
	  Fixes bug 325123.

2005-12-30  Andre Klapper <a9016009@gmx.de>

	* gui/apps_evolution_calendar.schemas.in.in:
 	  harmonized "URL", "Url" and "url". Fixes bug 325125.

2005-12-30  Andre Klapper <a9016009@gmx.de>

	* calendar.error.xml:
	  changing "canceled" to "cancelled" to stay consistant to the rest.
	  Fixes bug 325116.

2005-12-20  Andre Klapper  <a9016009@gmx.de>

	* calendar.error.xml: Adding punctation to some error messages.
	  Fixes bug 313144.

2005-12-20  Andre Klapper  <a9016009@gmx.de>

	* gui/dialogs/recur-comp.c: fixing string bug 308851

2005-12-23  Harish Krishnaswamy  <kharish@novell.com>
